# ccmark

./: .gitignore  CMakeLists.txt  README.md
src/: BlockParser.cpp  BlockParser.h  CoreState.cpp  CoreState.h  FootnoteIds.cpp  FootnoteIds.h  InlineParser.cpp  InlineParser.h  LinkIds.cpp  LinkIds.h  Renderer.cpp  Renderer.h  ccmark.cpp  ccmark.h  main.cpp  options.cpp  options.h  processor.cpp  processor.h  token.cpp  token.h
src/block_rules/: BlockState.cpp  BlockState.h  block_rules.cpp  block_rules.h  blockquote.cpp  code.cpp  fence.cpp  footnote_def.cpp  heading.cpp  hr.cpp  html_block.cpp  lheading.cpp  list.cpp  math_block.cpp  paragraph.cpp  reference.cpp
src/helpers/: common.cpp  common.h  encode.cpp  encode.h  entities.c  html_re.cpp  html_re.h
src/inline_rules/: InlineState.cpp  InlineState.h  autolink.cpp  backtick.cpp  emphasis.cpp  entity.cpp  escape.cpp  footnote_inline.cpp  footnote_ref.cpp  html_inline.cpp  image.cpp  inline_rules.cpp  inline_rules.h  link.cpp  math_inline.cpp  newline.cpp  strikethrough.cpp  text.cpp
tests/: gbench.cpp  gbench.md  gtests.cpp  test.cpp  test1.cpp  test_entities.cpp
tests/CommonMark/: bad.txt  good.txt  spec.txt
tests/Markdown.mdtest/: Hard-wrapped paragraphs with list-like lines.html  Links, reference style.md  Links, shortcut references.md  Markdown Documentation - Basics.md  Markdown Documentation - Syntax.md
tests/tmp/: basic.html  basic.txt  custom.css  page1-1.html
